# Scarlatti

./: .gitignore  CMakeLists.txt  CompileShaders.bat  README.md
shaders/: vertex.vert
src/: Common.h  main.cpp
src/core/: Device.cpp  Device.h  Instance.cpp  Instance.h  PhysicalDevice.cpp  PhysicalDevice.h  Queue.cpp  Queue.h  SwapChain.cpp  SwapChain.h  Window.cpp  Window.h
src/resources/: DeviceResourceCache.cpp  DeviceResourceCache.h
